# agnt-tool-codec

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  MANIFEST.in  README.md  build-index.js  capability-index.json  codec-integration.js  config.json  dashboard.html  install.js  package.json  pyproject.toml  run-query.mjs  test-codec.js  tool-codec.js  tool-codec.mjs
.github/workflows/: ci.yml
docs/: scoring.md
evals/: demo-cases.json  runtime-cases.json
examples/: generic_runtime.py  openai_adapter.py  python_cli.py
spec/: capability-index.schema.json
src/agnt_tool_codec/: __init__.py  adapters.py  cli.py  core.py  eval.py  validation.py
src/agnt_tool_codec/data/: demo-index.json
tests/: test_python_codec.py
